--- a/app/views/players/registrations/new.html.erb
+++ b/app/views/players/registrations/new.html.erb
@@ -16,6 +16,10 @@
                         },
                         label: false,
                         placeholder: "Email" %>
+            <% if @quiz.school? %>
+              <%= f.input :name, input_html: { class: 'form-control-lg'}, label: false, placeholder: 'Ton nom' %>
+              <%= f.input :classroom, input_html: { class: 'form-control-lg'}, label: false, placeholder: 'Ta classe' %>
+            <% end %>
             <%= f.input :gdpr_approval, label: 'En utilisant ce formulaire, vous acceptez que nous stockions vos données sur ce site web', label_html: {class: 'text-white'} %>
             <%= f.input :quiz, as: :hidden, input_html: { value: @quiz } %>
           </div>
