--- a/app/views/players/results/_results_table.html.erb
+++ b/app/views/players/results/_results_table.html.erb
@@ -12,7 +12,7 @@
       <tr class="<%= 'leader' if (0...20).to_a.include?(index) %>" data-player-id="<%= game.player.id %>">
         <th scope="row" class="text-white"><%= index + 1 %></th>
         <td><i class="fas fa-trophy"></i></td>
-        <td><%= game.player.email.split('@')[0].capitalize %></td>
+        <td><%= game.player.username.capitalize %></td>
         <td><%= game.score %></td>
       </tr>
     <% end %>
