--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -32,8 +32,8 @@
           </tr>
         </thead>
         <tbody>
-          <% @quiz.players.uniq.each_with_index do |player, index| %>
-              <tr class="<%= 'leader-dashboard' if (0...20).to_a.include?(index) %>">
+          <% @quiz.players.uniq.each do |player| %>
+              <tr class="<%= 'leader-dashboard' if index == 0 %>">
                 <td><%= player.email %></td>
                 <td class="font-weight-light">
                   <%= player.last_name || "Non renseigné" %>
