--- a/app/views/players/registrations/new.html.erb
+++ b/app/views/players/registrations/new.html.erb
@@ -20,7 +20,7 @@
               <%= f.input :name, input_html: { class: 'form-control-lg'}, label: false, placeholder: 'Ton nom' %>
               <%= f.input :classroom, input_html: { class: 'form-control-lg'}, label: false, placeholder: 'Ta classe' %>
             <% end %>
-            <%= f.input :gdpr_approval, label: 'En utilisant ce formulaire, vous acceptez que nous stockions vos données sur ce site web', label_html: {class: 'text-white'} %>
+            <%= f.input :gdpr_approval, label: 'En renseignant votre adresse email, vous acceptez de recevoir par e-mail les actualités de UFO le distributeur du film. Vous pourrez vous désinscrire à tout moment à l’aide des liens de désinscription.', label_html: {class: 'text-white'} %>
             <%= f.input :quiz, as: :hidden, input_html: { value: @quiz } %>
           </div>
           <div class="form-actions text-center mt-4">
