--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -33,7 +33,7 @@
         </thead>
         <tbody>
           <% @quiz.players.order('games.score').uniq.reverse.each_with_index do |player, index| %>
-              <tr class="<%= 'leader-dashboard' if index == 0 %>">
+              <tr class="<%= 'leader-dashboard' if (0...3).to_a.include?(index) %>">
                 <td><%= player.email %></td>
                 <td class="font-weight-light">
                   <%= player.last_name || "Non renseigné" %>
