--- a/app/views/players/quizzes/show.html.erb
+++ b/app/views/players/quizzes/show.html.erb
@@ -6,7 +6,7 @@
       <h1 class="text-light">Prêt à jouer ?</h1>
         <ul class="list-unstyled mt-5 mb-5">
           <li>
-            <h4 class="mb-3"><%= @quiz.reward %> à gagner !</h4>
+            <!-- <h4 class="mb-3"><%= @quiz.reward %> à gagner !</h4> -->
           </li>
           <li>
             <p>Répondez rapidement pour augmenter vos chances</p>
